--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
 <body>
     <header>
         <h1>Movie Discovery</h1>
-        <input type="text" id="search-input" placeholder="Search for movies...">
-        <button id="search-button">Search</button>
-        <button id="toggle-theme">Toggle Dark Mode</button>
+        <div class="search-container">
+            <input type="text" id="search-input" placeholder="Search for movies...">
+            <button id="search-button">Search</button>
+            <button id="toggle-theme">🌙 Dark Mode</button>
+        </div>
     </header>
     <main>
         <section id="movie-results"></section>
